parser/stella_parser.go
// Code generated from StellaParser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // StellaParser

import (
	"fmt"
	"strconv"
  "sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type StellaParser struct {
	*antlr.BaseParser
}

var stellaparserParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  literalNames           []string
  symbolicNames          []string
  ruleNames              []string
  predictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func stellaparserParserInit() {
  staticData := &stellaparserParserStaticData
  staticData.literalNames = []string{
    "", "','", "';'", "'('", "')'", "'{'", "'}'", "'='", "':'", "'->'", 
    "'=>'", "'|'", "'<|'", "'|>'", "'['", "']'", "'<'", "'<='", "'>'", "'>='", 
    "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'.'", "'List::head'", "'List::isempty'", 
    "'List::tail'", "'Nat::pred'", "'Nat::iszero'", "'Nat::rec'", "'Bool'", 
    "'Nat'", "'Unit'", "'and'", "'as'", "'cons'", "'core'", "'else'", "'extend'", 
    "'false'", "'fix'", "'fn'", "'fold'", "'if'", "'in'", "'inl'", "'inline'", 
    "'inr'", "'language'", "'let'", "'letrec'", "'match'", "'not'", "'or'", 
    "'return'", "'succ'", "'then'", "'throws'", "'true'", "'type'", "'unfold'", 
    "'unit'", "'with'", "'\\u00C2\\u00B5'", "'exception'", "'variant'", 
    "'cast'", "':='", "'&'", "'new'", "'panic!'", "'throw'", "'try'", "'catch'", 
    "'Top'", "'Bot'", "'auto'", "'generic'", "'forall'",
  }
  staticData.symbolicNames = []string{
    "", "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", "Surrogate_id_SYMB_2", 
    "Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", "Surrogate_id_SYMB_5", 
    "Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", "Surrogate_id_SYMB_8", 
    "Surrogate_id_SYMB_9", "Surrogate_id_SYMB_10", "Surrogate_id_SYMB_11", 
    "Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13", "Surrogate_id_SYMB_14", 
    "Surrogate_id_SYMB_15", "Surrogate_id_SYMB_16", "Surrogate_id_SYMB_17", 
    "Surrogate_id_SYMB_18", "Surrogate_id_SYMB_19", "Surrogate_id_SYMB_20", 
    "Surrogate_id_SYMB_21", "Surrogate_id_SYMB_22", "Surrogate_id_SYMB_23", 
    "Surrogate_id_SYMB_24", "Surrogate_id_SYMB_25", "Surrogate_id_SYMB_26", 
    "Surrogate_id_SYMB_27", "Surrogate_id_SYMB_28", "Surrogate_id_SYMB_29", 
    "Surrogate_id_SYMB_30", "Surrogate_id_SYMB_31", "Surrogate_id_SYMB_32", 
    "Surrogate_id_SYMB_33", "Surrogate_id_SYMB_34", "Surrogate_id_SYMB_35", 
    "Surrogate_id_SYMB_36", "Surrogate_id_SYMB_37", "Surrogate_id_SYMB_38", 
    "Surrogate_id_SYMB_39", "Surrogate_id_SYMB_40", "Surrogate_id_SYMB_41", 
    "Surrogate_id_SYMB_42", "Surrogate_id_SYMB_43", "Surrogate_id_SYMB_44", 
    "Surrogate_id_SYMB_45", "Surrogate_id_SYMB_46", "Surrogate_id_SYMB_47", 
    "Surrogate_id_SYMB_48", "Surrogate_id_SYMB_49", "Surrogate_id_SYMB_50", 
    "Surrogate_id_SYMB_51", "Surrogate_id_SYMB_52", "Surrogate_id_SYMB_53", 
    "Surrogate_id_SYMB_54", "Surrogate_id_SYMB_55", "Surrogate_id_SYMB_56", 
    "Surrogate_id_SYMB_57", "Surrogate_id_SYMB_58", "Surrogate_id_SYMB_59", 
    "Surrogate_id_SYMB_60", "Surrogate_id_SYMB_61", "Surrogate_id_SYMB_62", 
    "Surrogate_id_SYMB_63", "Surrogate_id_SYMB_64", "Surrogate_id_SYMB_65", 
    "EXCEPTION", "VARIANT", "CAST", "ASSIGN", "REF_TYPE", "REFERENCE", "PANIC", 
    "THROW", "TRY", "CATCH", "TOP_TYPE", "BOTTOM_TYPE", "AUTO_TYPE", "GENERIC", 
    "FORALL", "COMMENT_antlr_builtin", "MULTICOMMENT_antlr_builtin", "StellaIdent", 
    "ExtensionName", "MemoryAddress", "INTEGER", "WS", "ErrorToken",
  }
  staticData.ruleNames = []string{
    "start_Program", "start_Expr", "start_Type", "program", "languageDecl", 
    "extension", "decl", "annotation", "paramDecl", "expr", "patternBinding", 
    "binding", "matchCase", "pattern", "labelledPattern", "stellatype", 
    "recordFieldType", "variantFieldType",
  }
  staticData.predictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// StellaParserInit initializes any static state used to implement StellaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewStellaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func StellaParserInit() {
  staticData := &stellaparserParserStaticData
  staticData.once.Do(stellaparserParserInit)
}

// NewStellaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewStellaParser(input antlr.TokenStream) *StellaParser {
	StellaParserInit()
	this := new(StellaParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &stellaparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "StellaParser.g4"

	return this
}


// StellaParser tokens.
const (
	StellaParserEOF = antlr.TokenEOF
	StellaParserSurrogate_id_SYMB_0 = 1
	StellaParserSurrogate_id_SYMB_1 = 2
	StellaParserSurrogate_id_SYMB_2 = 3
	StellaParserSurrogate_id_SYMB_3 = 4
	StellaParserSurrogate_id_SYMB_4 = 5
	StellaParserSurrogate_id_SYMB_5 = 6
	StellaParserSurrogate_id_SYMB_6 = 7
	StellaParserSurrogate_id_SYMB_7 = 8
	StellaParserSurrogate_id_SYMB_8 = 9
	StellaParserSurrogate_id_SYMB_9 = 10
	StellaParserSurrogate_id_SYMB_10 = 11
	StellaParserSurrogate_id_SYMB_11 = 12
	StellaParserSurrogate_id_SYMB_12 = 13
	StellaParserSurrogate_id_SYMB_13 = 14
	StellaParserSurrogate_id_SYMB_14 = 15
	StellaParserSurrogate_id_SYMB_15 = 16
	StellaParserSurrogate_id_SYMB_16 = 17
	StellaParserSurrogate_id_SYMB_17 = 18
	StellaParserSurrogate_id_SYMB_18 = 19
	StellaParserSurrogate_id_SYMB_19 = 20
	StellaParserSurrogate_id_SYMB_20 = 21
	StellaParserSurrogate_id_SYMB_21 = 22
	StellaParserSurrogate_id_SYMB_22 = 23
	StellaParserSurrogate_id_SYMB_23 = 24
	StellaParserSurrogate_id_SYMB_24 = 25
	StellaParserSurrogate_id_SYMB_25 = 26
	StellaParserSurrogate_id_SYMB_26 = 27
	StellaParserSurrogate_id_SYMB_27 = 28
	StellaParserSurrogate_id_SYMB_28 = 29
	StellaParserSurrogate_id_SYMB_29 = 30
	StellaParserSurrogate_id_SYMB_30 = 31
	StellaParserSurrogate_id_SYMB_31 = 32
	StellaParserSurrogate_id_SYMB_32 = 33
	StellaParserSurrogate_id_SYMB_33 = 34
	StellaParserSurrogate_id_SYMB_34 = 35
	StellaParserSurrogate_id_SYMB_35 = 36
	StellaParserSurrogate_id_SYMB_36 = 37
	StellaParserSurrogate_id_SYMB_37 = 38
	StellaParserSurrogate_id_SYMB_38 = 39
	StellaParserSurrogate_id_SYMB_39 = 40
	StellaParserSurrogate_id_SYMB_40 = 41
	StellaParserSurrogate_id_SYMB_41 = 42
	StellaParserSurrogate_id_SYMB_42 = 43
	StellaParserSurrogate_id_SYMB_43 = 44
	StellaParserSurrogate_id_SYMB_44 = 45
	StellaParserSurrogate_id_SYMB_45 = 46
	StellaParserSurrogate_id_SYMB_46 = 47
	StellaParserSurrogate_id_SYMB_47 = 48
	StellaParserSurrogate_id_SYMB_48 = 49
	StellaParserSurrogate_id_SYMB_49 = 50
	StellaParserSurrogate_id_SYMB_50 = 51
	StellaParserSurrogate_id_SYMB_51 = 52
	StellaParserSurrogate_id_SYMB_52 = 53
	StellaParserSurrogate_id_SYMB_53 = 54
	StellaParserSurrogate_id_SYMB_54 = 55
	StellaParserSurrogate_id_SYMB_55 = 56
	StellaParserSurrogate_id_SYMB_56 = 57
	StellaParserSurrogate_id_SYMB_57 = 58
	StellaParserSurrogate_id_SYMB_58 = 59
	StellaParserSurrogate_id_SYMB_59 = 60
	StellaParserSurrogate_id_SYMB_60 = 61
	StellaParserSurrogate_id_SYMB_61 = 62
	StellaParserSurrogate_id_SYMB_62 = 63
	StellaParserSurrogate_id_SYMB_63 = 64
	StellaParserSurrogate_id_SYMB_64 = 65
	StellaParserSurrogate_id_SYMB_65 = 66
	StellaParserEXCEPTION = 67
	StellaParserVARIANT = 68
	StellaParserCAST = 69
	StellaParserASSIGN = 70
	StellaParserREF_TYPE = 71
	StellaParserREFERENCE = 72
	StellaParserPANIC = 73
	StellaParserTHROW = 74
	StellaParserTRY = 75
	StellaParserCATCH = 76
	StellaParserTOP_TYPE = 77
	StellaParserBOTTOM_TYPE = 78
	StellaParserAUTO_TYPE = 79
	StellaParserGENERIC = 80
	StellaParserFORALL = 81
	StellaParserCOMMENT_antlr_builtin = 82
	StellaParserMULTICOMMENT_antlr_builtin = 83
	StellaParserStellaIdent = 84
	StellaParserExtensionName = 85
	StellaParserMemoryAddress = 86
	StellaParserINTEGER = 87
	StellaParserWS = 88
	StellaParserErrorToken = 89
)

// StellaParser rules.
const (
	StellaParserRULE_start_Program = 0
	StellaParserRULE_start_Expr = 1
	StellaParserRULE_start_Type = 2
	StellaParserRULE_program = 3
	StellaParserRULE_languageDecl = 4
	StellaParserRULE_extension = 5
	StellaParserRULE_decl = 6
	StellaParserRULE_annotation = 7
	StellaParserRULE_paramDecl = 8
	StellaParserRULE_expr = 9
	StellaParserRULE_patternBinding = 10
	StellaParserRULE_binding = 11
	StellaParserRULE_matchCase = 12
	StellaParserRULE_pattern = 13
	StellaParserRULE_labelledPattern = 14
	StellaParserRULE_stellatype = 15
	StellaParserRULE_recordFieldType = 16
	StellaParserRULE_variantFieldType = 17
)

// IStart_ProgramContext is an interface to support dynamic dispatch.
type IStart_ProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetX returns the x rule contexts.
	GetX() IProgramContext


	// SetX sets the x rule contexts.
	SetX(IProgramContext)


	// Getter signatures
	EOF() antlr.TerminalNode
	Program() IProgramContext

	// IsStart_ProgramContext differentiates from other interfaces.
	IsStart_ProgramContext()
}

type Start_ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	x IProgramContext 
}

func NewEmptyStart_ProgramContext() *Start_ProgramContext {
	var p = new(Start_ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = StellaParserRULE_start_Program
	return p
}

func (*Start_ProgramContext) IsStart_ProgramContext() {}

func NewStart_ProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Start_ProgramContext {
	var p = new(Start_ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = StellaParserRULE_start_Program

	return p
}

func (s *Start_ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *Start_ProgramContext) GetX() IProgramContext { return s.x }


func (s *Start_ProgramContext) SetX(v IProgramContext) { s.x = v }


func (s *Start_ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(StellaParserEOF, 0)
}

func (s *Start_ProgramContext) Program() IProgramContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProgramContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProgramContext)
}

func (s *Start_ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Start_ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Start_ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(StellaParserListener); ok {
		listenerT.EnterStart_Program(s)
	}
}

func (s *Start_ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(StellaParserListener); ok {
		listenerT.ExitStart_Program(s)
	}
}

func (s *Start_ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case StellaParserVisitor:
		return t.VisitStart_Program(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *StellaParser) Start_Program() (localctx IStart_ProgramContext) {
	this := p
	_ = this

	localctx = NewStart_ProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, StellaParserRULE_start_Program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)

		var _x = p.Program()


		localctx.(*Start_ProgramContext).x = _x
	}
	{
		p.SetState(37)
		p.Match(StellaParserEOF)
	}



	return localctx
}


// IStart_ExprContext is an interface to support dynamic dispatch.
type IStart_ExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetX returns the x rule contexts.
	GetX() IExprContext


	// SetX sets the x rule contexts.
	SetX(IExprContext)


	// Getter signatures
	EOF() antlr.TerminalNode
	Expr() IExprContext

	// IsStart_ExprContext differentiates from other interfaces.
	IsStart_ExprContext()
}

type Start_ExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	x IExprContext 
}

func NewEmptyStart_ExprContext() *Start_ExprContext {
	var p = new(Start_ExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = StellaParserRULE_start_Expr
	return p
}

func (*Start_ExprContext) IsStart_ExprContext() {}

func NewStart_ExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Start_ExprContext {
	var p = new(Start_ExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = StellaParserRULE_start_Expr

	return p
}

func (s *Start_ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *Start_ExprContext) GetX() IExprContext { return s.x }


func (s *Start_ExprContext) SetX(v IExprContext) { s.x = v }


func (s *Start_ExprContext) EOF() antlr.TerminalNode {
	return s.GetToken(StellaParserEOF, 0)
}

func (s *Start_ExprContext) Expr() IExprContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *Start_ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Start_ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Start_ExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(StellaParserListener); ok {
		listenerT.EnterStart_Expr(s)
	}
}

func (s *Start_ExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(StellaParserListener); ok {
		listenerT.ExitStart_Expr(s)
	}
}

func (s *Start_ExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case StellaParserVisitor:
		return t.VisitStart_Expr(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *StellaParser) Start_Expr() (localctx IStart_ExprContext) {
	this := p
	_ = this

	localctx = NewStart_ExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, StellaParserRULE_start_Expr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(39)

		var _x = p.expr(0)

		localctx.(*Start_ExprContext).x = _x
	}
	{
		p.SetState(40)
		p.Match(StellaParserEOF)
	}



	return localctx
}


// IStart_TypeContext is an interface to support dynamic dispatch.
type IStart_TypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetX returns the x rule contexts.
	GetX() IStellatypeContext


	// SetX sets the x rule contexts.
	SetX(IStellatypeContext)


	// Getter signatures
	EOF() antlr.TerminalNode
	Stellatype() IStellatypeContext

	// IsStart_TypeContext differentiates from other interfaces.
	IsStart_TypeContext()
}

type Start_TypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	x IStellatypeContext 
}

func NewEmptyStart_TypeContext() *Start_TypeContext {
	var p = new(Start_TypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = StellaParserRULE_start_Type
	return p
}

func (*Start_TypeContext) IsStart_TypeContext() {}

func NewStart_TypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Start_TypeContext {
	var p = new(Start_TypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = StellaParserRULE_start_Type

	return p
}

func (s *Start_TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *Start_TypeContext) GetX() IStellatypeContext { return s.x }


func (s *Start_TypeContext) SetX(v IStellatypeContext) { s.x = v }


func (s *Start_TypeContext) EOF() antlr.TerminalNode {
	return s.GetToken(StellaParserEOF, 0)
}

func (s *Start_TypeContext) Stellatype() IStellatypeContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStellatypeContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStellatypeContext)
}

func (s *Start_TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Start_TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Start_TypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(StellaParserListener); ok {
		listenerT.EnterStart_Type(s)
	}
}

func (s *Start_TypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(StellaParserListener); ok {
		listenerT.ExitStart_Type(s)
	}
}

func (s *Start_TypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case StellaParserVisitor:
		return t.VisitStart_Type(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *StellaParser) Start_Type() (localctx IStart_TypeContext) {
	this := p
	_ = this

	localctx = NewStart_TypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, StellaParserRULE_start_Type)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)

		var _x = p.stellatype(0)

		localctx.(*Start_TypeContext).x = _x
	}
	{
		p.SetState(43)
		p.Match(StellaParserEOF)
	}



	return localctx
}


// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_extension returns the _extension rule contexts.
	Get_extension() IExtensionContext

	// Get_decl returns the _decl rule contexts.
	Get_decl() IDeclContext


	// Set_extension sets the _extension rule contexts.
	Set_extension(IExtensionContext)

	// Set_decl sets the _decl rule contexts.
	Set_decl(IDeclContext)


	// GetExtensions returns the extensions rule context list.
	GetExtensions() []IExtensionContext

	// GetDecls returns the decls rule context list.
	GetDecls() []IDeclContext


	// SetExtensions sets the extensions rule context list.
	SetExtensions([]IExtensionContext) 

	// SetDecls sets the decls rule context list.
	SetDecls([]IDeclContext) 


	// Getter signatures
	LanguageDecl() ILanguageDeclContext
	AllExtension() []IExtensionContext
	Extension(i int) IExtensionContext
	AllDecl() []IDeclContext
	Decl(i int) IDeclContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	_extension IExtensionContext 
	extensions []IExtensionContext
	_decl IDeclContext 
	decls []IDeclContext
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = StellaParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = StellaParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Get_extension() IExtensionContext { return s._extension }

func (s *ProgramContext) Get_decl() IDeclContext { return s._decl }


func (s *ProgramContext) Set_extension(v IExtensionContext) { s._extension = v }

func (s *ProgramContext) Set_decl(v IDeclContext) { s._decl = v }


func (s *ProgramContext) GetExtensions() []IExtensionContext { return s.extensions }

func (s *ProgramContext) GetDecls() []IDeclContext { return s.decls }


func (s *ProgramContext) SetExtensions(v []IExtensionContext) { s.extensions = v }

func (s *ProgramContext) SetDecls(v []IDeclContext) { s.decls = v }

